# Backend-OnlineSchool-Prototype

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
management/commands/: fill.py
school/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
school/management/commands/: fill.py
school/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options_and_more.py  0002_initial.py  0003_course_user_lesson_user.py  0003_payment.py  0004_following.py  0005_course_cost_lesson_cost.py  0006_payment_link.py  0007_alter_payment_amount_alter_payment_link.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_last_login.py  0003_alter_user_options_alter_user_last_login.py
